gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: nginx-gateway
  namespace: demo

  annotations:
    argocd.argoproj.io/sync-wave: "30"

spec:
  gatewayClassName: nginx

  listeners:

    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All
